[package]
name = "kube-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.90.0", features = ["config"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.82"
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
